GNOME Bugzilla – Bug 603457
e-utils-CRITICAL **: Plugin "Exchange Operations" is missing a function named eex_ui_mail_init()
Last modified: 2009-12-01 19:04:37 UTC
Evolution 2.29.3 (evolution:25488): evolution-plugin-lib-WARNING **: can't load plugin '/home/akhil/opt/gnome2/lib/evolution/2.30/plugins/liborg-gnome-exchange-operations': /home/akhil/opt/gnome2/lib/evolution/2.30/plugins/liborg-gnome-exchange-operations.so: undefined symbol: e_error_run looks like a side effect of bug 602963
yup, eex and ema should be updated as well. Make it part of that bug, so he will know.
Created attachment 148839 [details] [review] Update evolution-exchange for e_error -> e_alert changes in evolution
Created attachment 148840 [details] [review] Remove unnecessary e-error.h include e-error.h does not exist anymore in evolution (it is now e-alert.h), but no types from this file were used anyway, so we can just remove it.
I didn't see any use of e_error_* API in evolution-mapi (though one file did include e-error.h unnecessarily). But I couldn't build evolution-mapi for other reasons, so I haven't tested that the second patch actually fixes the build. If somebody could test this for me, I would appreciate it.
Thanks. It seems to do the trick. Please commit to master, only with the ema patch do not include that part in po/Makefile.in.in, it shouldn't be there, I believe. by the way, when I apply your patches it claims: $ patch -p1 <../ema.patch patching file po/Makefile.in.in patching file src/account-setup-eplugin/exchange-mapi-account-listener.c patch unexpectedly ends in middle of line it never did such thing to me with 'git diff'.
oh, Oops. I didn't notice the Makefile.in.in changes. I suppose that means that they were changed as part of the build process. So it looks like this is a generated file that was added to git. Maybe it should be removed from version control? In any case, I've pushed the patches without that hunk.